--- a/build.css
+++ b/build.css
@@ -40,6 +40,10 @@ body{
     text-align: center;
     line-height: 32px;
     border: 1px dashed white;
+    transition: background-color .3s;
+}
+.link-cv:hover{
+    background-color: rgba(255,255,255, 0.3);
 }
 svg{
     display: block;
